<resources>
    <string name="app_name">WorkHappily</string>
    <string name="text_setting">设置</string>
    <string name="text_user_name">用户名</string>
    <string name="text_user_age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_boy">男</string>
    <string name="text_girl">女</string>
    <string name="text_password">密码</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_email">邮箱</string>
    <string name="text_register_remind">注册成功要前往邮箱验证！</string>
    <string name="text_registered">注册</string>
    <string name="text_admin">主管</string>
    <string name="text_staff">员工</string>
    <string name="text_user_company">公司</string>
</resources>
